# Epic_programacion3

./: CMakeLists.txt  main.cpp
include/utec/algebra/: shape.h  tensor_backend.cpp.h  tensor_backend.h
include/utec/nn/: neural_network.h  nn_activation.h  nn_convolution.h  nn_dense.h  nn_flatten.h  nn_interfaces.h  nn_loss.h  nn_ops.h  nn_optimizer.h  nn_pooling.h
tests/epic1/: feature1_eigen_backend_test.cpp  feature2_numeric_ops_test.cpp
